<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:orientation="vertical"
    tools:context=".Fragments.IngredientsFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_ingredients"
            android:gravity="center"
            android:textSize="24sp"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/Ingredient_Fragment_RecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.50">

        </android.support.v7.widget.RecyclerView>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/brown_100"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_steps"
            android:gravity="center"
            android:textSize="24sp"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/Ingredient_Fragment_StepRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.50" />

    </LinearLayout>
</layout>