<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    tools:context=".Activities.MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/brown_100">

        <ProgressBar
            android:id="@+id/MainActivity_Progressbar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/mainActivity_RecyclerView"
            app:layout_constraintEnd_toEndOf="@+id/mainActivity_RecyclerView"
            app:layout_constraintStart_toStartOf="@+id/mainActivity_RecyclerView"
            app:layout_constraintTop_toTopOf="@+id/mainActivity_RecyclerView" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/mainActivity_RecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

        </android.support.v7.widget.RecyclerView>
    </android.support.constraint.ConstraintLayout>


</layout>